[project]
name = "langchain_bfx"
description = "LangChain for microbiome bioinformatics"
dynamic = ["version"]
dependencies = [
    
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "langchain_bfx.__version__"}

[project.scripts]
do_bfx = "langchain_bfx.cli:main"